ci: force install (#6)
* ci(ci): force install

* ci(cd): force installs

* ci: tidy inline comments

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
 
     lint:
         name: Lint Code
-        runs-on: windows-latest
+        runs-on: ubuntu-latest
         permissions:
             contents: read
         steps:
@@ -60,7 +60,8 @@ jobs:
                   node-version-file: .nvmrc
 
             - name: Install
-              run: npm i --ignore-scripts
+              # Force install to bypass OS/CPU checks; this job only lints
+              run: npm i -f --ignore-scripts
 
             - name: Audit NPM package signatures and provenance attestations
               run: npm audit signatures
