--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	"bugs": {
 		"url": "https://github.com/Fdawgs/node-unrtf-win32/issues"
 	},
-	"license": "gpl-3.0-or-later",
+	"license": "GPL-3.0-or-later",
 	"author": "Frazer Smith <frazer.dev@icloud.com>",
 	"funding": "https://github.com/sponsors/Fdawgs",
 	"engines": {
