--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -57,12 +57,12 @@ jobs:
             - name: Publish to NPM
               # Build docs/definitions, and remove dev values
               # from package.json before publishing to reduce package size.
-              # Force install to bypass OS/CPU checks; this job only builds and publishes
+              # Force install to bypass OS/CPU checks; does not impact published package
               run: |
                   npm i -g npm@latest
                   npm i -f --ignore-scripts
                   npm run build --if-present
-                  npm pkg delete commitlint devDependencies jest scripts
+                  npm pkg delete commitlint devDependencies scripts
                   npm publish --access public --ignore-scripts
 
     publish-ghp:
@@ -104,10 +104,10 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               # Build docs/definitions, and remove dev values
               # from package.json before publishing to reduce package size.
-              # Force install to bypass OS/CPU checks; this job only builds and publishes
+              # Force install to bypass OS/CPU checks; does not impact published package
               run: |
                   npm i -g npm@latest
                   npm i -f --ignore-scripts
                   npm run build --if-present
-                  npm pkg delete commitlint devDependencies jest scripts
+                  npm pkg delete commitlint devDependencies scripts
                   npm publish --access public --ignore-scripts --provenance
