--- a/.npmignore
+++ b/.npmignore
@@ -2,9 +2,6 @@
 # Removing the `files` key and replacing it with this `.npmignore` saves some bytes, which
 # should improve installation performance slightly
 *
-!src/index.js
-!src/lib/unrtf*/bin/**
-!src/lib/unrtf*/contrib/**/COPYING
-!src/lib/unrtf*/contrib/**/README
+!src/**
 !types/index.d.ts
 !types/index.d.ts.map
